[hw2] initial commit :rocket:

--- a/fri-prev/doc/Makefile
+++ b/fri-prev/doc/Makefile
@@ -1,5 +1,7 @@
-lang-spec.pdf: lang-spec.tex
+lang-spec.pdf: lang-spec.tex ../prg/src/compiler/phase/synan/prev-lr.grammar
+	./grammar.sh
 	pdflatex lang-spec.tex
 
 clean:
+	'rm' -fr grammar.tex
 	'rm' -fr *~ *.aux *.log *.pdf *.gz
