--- a/fri-prev/src/Makefile
+++ b/fri-prev/src/Makefile
@@ -2,8 +2,14 @@
 # START GOOGLE CHROME WITH --allow-file-access-from-files
 #
 
+%.synan.xml	: %.prev
+	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=synan --loggedphases=synan $<
+
 %.lexan.xml	: %.prev
 	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=lexan --loggedphases=lexan $<
 
 clean		:
+	mv test.prev .test.prev
+	'rm' -fr *.prev
+	mv .test.prev test.prev
 	'rm' -fr *.xml
