[hw6] levels fixed w/hack

--- a/fri-prev/src/Makefile
+++ b/fri-prev/src/Makefile
@@ -3,8 +3,17 @@
 #
 
 
+%.imcode.xml	: %.prev
+	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=imcode --loggedphases=imcode $<
+
 %.frames.xml	: %.prev
 	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=frames --loggedphases=frames $<
+
+%.seman.xml	: %.prev
+	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=seman --loggedphases=seman $<
+
+%.abstr.xml	: %.prev
+	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=abstr --loggedphases=abstr $<
 
 %.synan.xml	: %.prev
 	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=synan --loggedphases=synan $<
