[hw7] all works for now, wtf is w/ CJUMP?

--- a/fri-prev/src/Makefile
+++ b/fri-prev/src/Makefile
@@ -3,6 +3,9 @@
 #
 
 
+%.lincode.xml	: %.prev
+	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=lincode --loggedphases=lincode $<
+
 %.imcode.xml	: %.prev
 	java -classpath ../prg/bin compiler.Main --xsldir=../prg/xsl --phase=imcode --loggedphases=imcode $<
 
