[hw9] sth is wrong w/ memory

--- a/fri-prev/src/Makefile
+++ b/fri-prev/src/Makefile
@@ -1,5 +1,5 @@
-#
-# START GOOGLE CHROME WITH google-chrome --allow-file-access-from-files
+# 
+# START GOOGLE CHROME WITH google-chrome --allow-file-access-from-files &
 #
 
 %.regalloc.xml	: %.prev
